kubernetes/cert-manager/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/instance: certificate-manager
    kubernetes.io/metadata.name: cert-manager
  name: cert-manager
